--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
      <section class="cards-section">
         <div class="cards">
-            <div class="card1">
+            <div class="card">
                 <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg" alt="tech">
                 <h3>Lorem ipsum dolor dipisicing elit.</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
@@ -103,7 +103,7 @@
                 </div>
             </div>
 
-             <div class="card2">
+             <div class="card">
                 <img src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg" alt="tech">
                 <h3>Lorem ipsum dolor dipisicing elit.</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-             <div class="card3">
+             <div class="card">
                 <img src="https://images.pexels.com/photos/356056/pexels-photo-356056.jpeg" alt="tech">
                 <h3>Lorem ipsum dolor dipisicing elit.</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
@@ -122,6 +122,39 @@
                     <img src="https://images.pexels.com/photos/157661/young-woman-shooting-model-157661.jpeg" alt="profile">
                     <p>lorem ipsum aug 30, 2025</p>
                     <span class="tech">Techonoly</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://images.pexels.com/photos/725255/pexels-photo-725255.jpeg" alt="tech">
+                <h3>Lorem ipsum dolor dipisicing elit.</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
+                <div class="card-profile">
+                    <img src="https://images.pexels.com/photos/157661/young-woman-shooting-model-157661.jpeg" alt="profile">
+                    <p>lorem ipsum aug 30, 2025</p>
+                    <span class="life">Lifestle</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://images.pexels.com/photos/1271619/pexels-photo-1271619.jpeg" alt="tech">
+                <h3>Lorem ipsum dolor dipisicing elit.</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
+                <div class="card-profile">
+                    <img src="https://images.pexels.com/photos/157661/young-woman-shooting-model-157661.jpeg" alt="profile">
+                    <p>lorem ipsum aug 30, 2025</p>
+                    <span class="travel">Travel</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://images.pexels.com/photos/3935702/pexels-photo-3935702.jpeg" alt="tech">
+                <h3>Lorem ipsum dolor dipisicing elit.</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt.</p>
+                <div class="card-profile">
+                    <img src="https://images.pexels.com/photos/157661/young-woman-shooting-model-157661.jpeg" alt="profile">
+                    <p>lorem ipsum aug 30, 2025</p>
+                    <span class="travel">Travel</span>
                 </div>
             </div>
 
@@ -178,6 +211,23 @@
         </form>
 
     </section>
-     
+
+     <footer class="site-footer">
+    <p><i class="fa-solid fa-copyright"></i>2025 AchieversIT. All Rights Reserved</p>
+    <div class="footer-links">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Connect</a>
+        <a href="#">Contribute</a>
+    </div>
+    <div class="footer-social">
+        <span>Follow us :</span>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+</footer>
 </body>
 </html>
